# OpenCVSample

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/enjoy/opencvsample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FaceTracker.cpp  FaceTracker.h  native-lib.cpp
app/src/main/cpp/log/: AndroidLog.h
app/src/main/java/com/enjoy/opencvsample/: FaceTracker.java  MainActivity.java  Utils.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/enjoy/opencvsample/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
